src/test/success/comments.egern
print(1)

/*
print(4)
print(5)
*/

// print(6)

print(2)