src/test/fail/len_of_non_iterable_fail.egern
print(len(2))
print(len(true))
